--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,2 +1,20 @@
 spring.application.name=demo
 spring.data.mongodb.uri=mongodb://localhost:27017/kafka-sample
+
+# Kafka bootstrap servers
+spring.kafka.bootstrap-servers=localhost:9092
+
+# Producer key and value serializers
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+# Producer key and value serializers
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+# Acknowledgment level
+spring.kafka.producer.acks=all
+
+# Additional producer properties
+spring.kafka.producer.properties.enable.idempotence=true
+
