Added User data generator cron job

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -77,6 +77,10 @@
             <version>1.5.5.Final</version> <!-- Check for latest version -->
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
 
 
         <!--        <dependency>-->
